implement summarization endpoint (api based) unstable
Update 2_📝_Text_Summarization.py
add limitation on text area to prevent internal server error
add example usage and fix formatting output
disable tf and transformers
trying to fix bug (couldn't load tensorflow)

--- a/testfunc.ipynb
+++ b/testfunc.ipynb
@@ -57,6 +57,83 @@
     "\n",
     "print(response.text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'summary_text': \"When it comes to navigating through the complexities of this modern era, it is crucial to cultivate a broad range of skills and knowledge. Key skills for success in today's world include effective communication, critical thinking, and creativity. Critical thinking allows us to analyze, evaluate, and interpret data and ideas, making informed decisions, solving complex problems, and separating fact from fiction. Creativity fuels innovation and adapts to changing circumstances, making it a highly sought-after skill in the 21st century.\"}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import os\n",
+    "import json\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "SUMMARIZATION_TOKEN = os.getenv(\"SUMMARIZATION_TOKEN\")\n",
+    "\n",
+    "SUMARIZATION_API_URL = os.getenv(\"SUMMARIZATION_API_URL\")\n",
+    "headers = {\"Authorization\": f\"Bearer {SUMMARIZATION_TOKEN}\"}\n",
+    "\n",
+    "def query(payload):\n",
+    "\tdata = json.dumps(payload)\n",
+    "\tresponse = requests.post(SUMARIZATION_API_URL, headers=headers, data=data)\n",
+    "\treturn response.json()\n",
+    "\t\n",
+    "output = query({\n",
+    "\"inputs\": \"\"\"In a world filled with ever-evolving technology and constant change, it's crucial to stay adaptable and open-minded. The pace of innovation and the interconnectedness of our global society present both opportunities and challenges that require us to think critically and creatively. As we navigate through the complexities of this modern era, it becomes increasingly important to cultivate a broad range of skills and knowledge.\n",
+    "\n",
+    "One of the fundamental skills for success in today's world is effective communication. The ability to express oneself clearly and concisely, both verbally and in writing, is essential in nearly every aspect of life. Whether it's making a persuasive argument, collaborating with others, or simply engaging in meaningful conversations, strong communication skills are indispensable.\n",
+    "\n",
+    "Another vital skill is critical thinking. In a world inundated with information, it's essential to be able to analyze, evaluate, and interpret data and ideas. Critical thinking allows us to make informed decisions, solve complex problems, and separate fact from fiction. It involves questioning assumptions, considering alternative perspectives, and arriving at well-reasoned conclusions.\n",
+    "\n",
+    "In addition to communication and critical thinking, creativity is becoming increasingly valuable. The ability to think outside the box, generate innovative ideas, and approach challenges with a fresh perspective can lead to breakthroughs in various fields. Creativity fuels innovation and allows us to adapt to changing circumstances, making it a highly sought-after skill in the 21st century.\"\"\",\n",
+    "})\n",
+    "\n",
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1597"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = \"\"\"\n",
+    "In a world filled with ever-evolving technology and constant change, it's crucial to stay adaptable and open-minded. The pace of innovation and the interconnectedness of our global society present both opportunities and challenges that require us to think critically and creatively. As we navigate through the complexities of this modern era, it becomes increasingly important to cultivate a broad range of skills and knowledge.\n",
+    "\n",
+    "One of the fundamental skills for success in today's world is effective communication. The ability to express oneself clearly and concisely, both verbally and in writing, is essential in nearly every aspect of life. Whether it's making a persuasive argument, collaborating with others, or simply engaging in meaningful conversations, strong communication skills are indispensable.\n",
+    "\n",
+    "Another vital skill is critical thinking. In a world inundated with information, it's essential to be able to analyze, evaluate, and interpret data and ideas. Critical thinking allows us to make informed decisions, solve complex problems, and separate fact from fiction. It involves questioning assumptions, considering alternative perspectives, and arriving at well-reasoned conclusions.\n",
+    "\n",
+    "In addition to communication and critical thinking, creativity is becoming increasingly valuable. The ability to think outside the box, generate innovative ideas, and approach challenges with a fresh perspective can lead to breakthroughs in various fields. Creativity fuels innovation and allows us to adapt to changing circumstances, making it a highly sought-after skill in the 21st century.\n",
+    "\"\"\"\n",
+    "\n",
+    "len(text)"
+   ]
   }
  ],
  "metadata": {
