update on formatting output
- image classification endpoint (json like output)
- remove model init for summarization endpoint

--- a/testfunc.ipynb
+++ b/testfunc.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Welcome to TechWas (Technology Waste), Daniel']\n"
+      "['Welcome to TechWas (Technology Waste)']\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "import os\n",
+    "import json\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()\n",
@@ -33,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"mouse : 95.11435031890869\"\n"
+      "{\"predictions\":[{\"Components Name\":\"Mouse\",\"Components Value\":95.11435627937317,\"Components ID\":10},{\"Components Name\":\"Rice Cooker\",\"Components Value\":3.4927770495414734,\"Components ID\":13},{\"Components Name\":\"E-kettle\",\"Components Value\":0.37718734238296747,\"Components ID\":4}],\"time_taken\":\"0 hours 0 minutes and 0.95 seconds.\",\"Image_Url\":\"https://storage.googleapis.com/techpybarahh/predictSave/Mouse2831559950000591629\"}\n"
      ]
     }
    ],
@@ -56,6 +57,44 @@
     "response = requests.request(\"POST\", url, headers=headers, data=payload, files=files)\n",
     "\n",
     "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"predictions\": [\n",
+      "        {\n",
+      "            \"Components Name\": \"Mouse\",\n",
+      "            \"Components Value\": 95.11435627937317,\n",
+      "            \"Components ID\": 10\n",
+      "        },\n",
+      "        {\n",
+      "            \"Components Name\": \"Rice Cooker\",\n",
+      "            \"Components Value\": 3.4927770495414734,\n",
+      "            \"Components ID\": 13\n",
+      "        },\n",
+      "        {\n",
+      "            \"Components Name\": \"E-kettle\",\n",
+      "            \"Components Value\": 0.37718734238296747,\n",
+      "            \"Components ID\": 4\n",
+      "        }\n",
+      "    ],\n",
+      "    \"time_taken\": \"0 hours 0 minutes and 0.95 seconds.\",\n",
+      "    \"Image_Url\": \"https://storage.googleapis.com/techpybarahh/predictSave/Mouse2831559950000591629\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "formatted_json = json.dumps(response.json(), indent=4)\n",
+    "print(formatted_json)"
    ]
   },
   {
